# igneouswr

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
references/: README.md  afm-18point-boundary.md  agent-internal-dev.md  an-ab-or-oconnor-spec.md  architecture-review-20260527.md  audit-priority-chain.md  base-fs-scaling-issue.md  batch-background-workflow.md  batch-output-workflow.md  batch2-registry-migration-patterns.md  boundary-extraction-pattern.md  classification-file-status.md  code-review-checklist.md  code-review-patches.md  data-audit-workflow.md  data-preparation.md  debug-script-to-json-migration.md  first-time-github-publishing.md  gcd-pdf-full-references.md  gcdkit-brother-project.md  gcdkit-polygon-translation.md  geo-plotters-xls-extraction.md  geochemical-significance-lasm.md  glitter-csv-format.md  group-inference-debug.md  jensen-cation-spec.md  json-fontsize-convention.md  k2o-sio2-middlemost-spec.md  known-bugs-and-issues.md  known-pitfalls.md  manual-merge-workflow.md  manuscript-data-verification.md  matplotlib-tick-workarounds.md  migration-validation-20260527.md  mixed-lithology-workflow.md  multi-subplot-compositing.md  normalize-convention.md  oconnor-volc-spec.md  panel-composing-workflow.md  pearce-thyb-nbyb-spec.md  (+33 more)
scripts/: _chem.py  _mullen_swap.py  _normalize.py  _style.py  _ternary.py  batch_backgrounds_main.py  build_2x2_geochem.py  generate_test_data.py  generate_wf1977_pure_final.py  glitter_zircon_ree.py  igneous_wr_core.py  merge_excel.py  quick_validate.py  run_test.py  (+1 more)
(+71 files in other folders)
